k8s/applications/ai/hermes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes
  namespace: hermes
  labels:
    app.kubernetes.io/name: hermes
    app.kubernetes.io/part-of: ai
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
  hostnames:
    - 'hermes.peekoff.com'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hermes
          port: 3000
      timeouts:
        request: 0s
        backendRequest: 0s
